#  CMAKE CONFIG

CMAKE_MINIMUM_REQUIRED( VERSION 2.6 )

SET( ${PROJECT_NAME}_MAJOR_VERSION 0 )
SET( ${PROJECT_NAME}_MINOR_VERSION 2 )
SET( ${PROJECT_NAME}_PATCH_LEVEL 0 )

SET( CMAKE_BUILD_TYPE Release )

EXECUTE_PROCESS(
            COMMAND svnversion -n ..
        OUTPUT_VARIABLE SVN_REV )
MESSAGE( "SVN VERSION:  ${SVN_REV}" )

EXECUTE_PROCESS(
        COMMAND date +%Y_%m_%d
        OUTPUT_VARIABLE BUILD_DATE )

SET ( CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR} )
FIND_PACKAGE(ROOT)
INCLUDE_DIRECTORIES( ${ROOT_INCLUDE_DIR} )
LINK_DIRECTORIES( ${ROOT_LIBRARY_DIR} )

PROJECT( FastSim )

ADD_SUBDIRECTORY( src )

